# RecoFacial

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
database/: crear_bd.py  sistema_accesos.db
src/captura_entrenamiento/: captura_rostros.py  entrenar_modelo.py  re-capturar.py  reentrenar_modelo.py
src/deteccion/: area_juntas.py  area_laboratorio.py  area_servidores.py  reconocimiento_demo.py
src/gestion_bd/: agregar_areas.py  dar_permisos.py  gestionar_permisos.py
tests/: conftest.py  test_sistema.py
utils/: db_utils.py
